# solo_cc

./: .gitignore  CLAUDE.md  README.md
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/app/: database.py  dependencies.py  main.py
backend/app/routers/: auth_router.py  clientes.py  extrato.py  lancamentos.py  relatorios.py  totais.py  usuarios.py
backend/app/schemas/: clientes.py  extrato.py  lancamentos.py  relatorios.py  totais.py  usuarios.py
backend/app/services/: clientes.py  extrato.py  lancamentos.py  relatorios.py  totais.py  usuarios.py
backend/tests/: test_clientes.py  test_extrato.py  test_lancamentos.py  test_relatorios.py  test_totais.py  test_usuarios.py
docs/: FrmExtratoRpt_documentacao.md  FrmExtrato_documentacao.md  FrmLanca_documentacao.md  FrmPrincipal_documentacao.md  FrmUsuarios_documentacao.md  escopo_migracao.md  frmAlterar_documentacao.md  frmClienteNovo_documentacao.md  frmCredores1_documentacao.md  frmLogin_documentacao.md  frmReports_documentacao.md  frmRptDevedores1_documentacao.md  frmTotais2_documentacao.md
frontend/: AGENTS.MD  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
legacy/forms/: frmAlterar.Designer.vb  frmAlterar.resx  frmAlterar.vb  frmClienteNovo.Designer.vb  frmClienteNovo.resx  frmClienteNovo.vb  frmCredores1.Designer.vb  frmCredores1.resx  frmCredores1.vb  frmExtrato.Designer.vb  frmExtrato.resx  frmExtrato.vb  frmExtratoRpt.Designer.vb  frmExtratoRpt.resx  frmExtratoRpt.vb  frmLanca.Designer.vb  frmLanca.resx  frmLanca.vb  (+20 more)
(+44 files in other folders)
