[project]
name = "solo-cc-backend"
version = "0.1.0"
description = "Backend API — Solo Consultoria de Imóveis · Contas Correntes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
